# INF3995-simulation

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  compile_commands.json  format.sh  install_grpc.sh  randomize_seed.sh  startup.sh
communication/: CMakeLists.txt  server.cpp  server.h  service_implementation.cpp  service_implementation.h  simulation.proto
controllers/: CMakeLists.txt
controllers/crazyflie_sensing/: crazyflie_sensing.cpp
controllers/footbot/: main_simulation.h
controllers/footbot_diffusion/: footbot_diffusion.cpp  footbot_diffusion.h
controllers/main_simulation/: CMakeLists.txt  crazyflie_sensing.h  main_simulation.cpp  main_simulation.h
experiments/: crazyflie_sensing.argos  main_simulation.argos
struct/: command.h  distanceReadings.h  distance_reading.h  log.h  metric.h  position.h
